# Thesis

./: .directory  .gitignore  CMakeLists.txt  Thesis.pro  calccombustion.cpp  calccombustion.h  clacflow.cpp  clacflow.h  fuel.cpp  fuel.h  main.cpp  mainwindow.ui  readme.txt
BurnCalc/: CMakeLists.txt
BurnCalc/src/: chemicalSubstance.cpp  chemicalSubstance.h  element.cpp  element.h  guisubstance.cpp  guisubstance.h  main.cpp  mainwindow.cpp  mainwindow.h  mixture.cpp  mixture.h  reaction.cpp  reaction.h  runtimeerror.cpp  runtimeerror.h
BurnCalc/src/gui/: guiempericalformula.cpp  guiempericalformula.h  guisubstance.cpp  guisubstance.h
BurnCalc/src/tests/: chemicalSubstanceTests.cpp
Diploma/: CMakeLists.txt  document.cpp  document.h  featureModel.cpp  featureModel.h  graphicsItem.cpp  graphicsItem.h  main.cpp  mainWidget.cpp  mainWidget.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainwindow.cpp  mainwindow.h  mainworkplace.cpp  mainworkplace.h  regression.cpp  regression.h  regressionModel.cpp  regressionModel.h  table.cpp  table.h  tableModel.cpp  tableModel.h  tableView.cpp  tableView.h  tableWidget.cpp  tableWidget.h
Diploma/common/: common.h
Diploma/dataPlotWidget/: dataPlotWidget.cpp  dataPlotWidget.h  dataPlotWidget.ui
Diploma/datasetWidget/: datasetModel.cpp  datasetModel.h  datasetView.cpp  datasetView.h  datasetWidget.h
Diploma/documentTree/: dataset.h  document.cpp  experiment.cpp  experiment.h  featureModel.cpp  featureModel.h  iNode.h  linearRegressionModel.h
Diploma/experimentWidget/: experimentTable.cpp  experimentTable.h  experimentWidget.ui
Diploma/featureWidget/: featureGraphicsItem.cpp  featureGraphicsItem.h  featureGraphicsScene.cpp  featureGraphicsScene.h  featureHeaderGraphicsItem.cpp  featureHeaderGraphicsItem.h
Diploma/mainWindow/: mainWindow.cpp  viewController.h
Diploma/treeWidget/: treeModel.cpp  treeView.cpp  treeView.h
OldVersion/: ButtonChem.cpp  ButtonChem.h  Calc._txt  Calc.h  Calc.txt  ChildFrm.cpp  ChildFrm.h  DlgEmptyDoc.cpp  DlgEmptyDoc.h  FieldInput.cpp  FrameOutput.cpp  FrameOutput.h  MainFrm.cpp  MainFrm.h  PropertyPageChem.cpp  PropertyPageChem.h  PropertySheetChem.cpp  PropertySheetChem.h  ReadMe.txt  RichEditCtrlEnter.cpp  RichEditCtrlEnter.h  StaticChem.cpp  StaticChem.h  StdAfx.cpp  StdAfx.h  Table.h  ThermoCalc 16_01_2006.#ar  ThermoCalc.aps  ThermoCalc.clw  ThermoCalc.cpp  ThermoCalc.dsp  ThermoCalc.dsw  ThermoCalc.h  ThermoCalc.opt  ThermoCalc.plg  ThermoCalc.rc  ThermoCalc.sln  ThermoCalc.vcproj  ThermoCalc.vcxproj  ThermoCalc.vcxproj.filters  (+32 more)
OldVersion/Backup/: ThermoCalc.sln
OldVersion/Debug/: BuildLog.htm  StdAfx.sbr  ThermoCalc.res  mt.dep  vc90.idb
OldVersion/Release/: BuildLog.htm  StdAfx.sbr  ThermoCalc.res  mt.dep  vc90.idb
OldVersion/res/: ThermoCalc.rc2  Thumbs.db
OldVersion/Расчеты/: _metki_from_termo._cpp.txt  all_CCalc_cpp.txt  all_CCalc_head.txt  Подготовка и выбор ХВ из БД.txt  Расчет1.txt
cmakemodules/: script_findlibs.cmake  script_libboost.cmake  script_libexpat.cmake  script_libqt.cmake  script_libxls.cmake  script_libz.cmake  script_libzip.cmake
common/: common.h  qt.cpp  qt.h
dataPlotWidget/: abstractDataPlot.cpp  abstractDataPlot.h  chartSettings.cpp  chartSettings.h  chartSettings.ui  data3DPlotWidget.cpp  data3DPlotWidget.h  dataPlotWidget.cpp  dataPlotWidget.h  dataPlotWidget.ui
datasetWidget/: datasetModel.cpp  datasetModel.h  datasetView.cpp  datasetView.h  datasetWidget.cpp  datasetWidget.h  datasetWidget.ui
documentTree/: dataset.cpp  dataset.h  datasetColumnsView.cpp  datasetColumnsView.h  document.cpp  document.h  experiment.cpp  experiment.h  featureModel.cpp  featureModel.h  iNode.cpp  iNode.h  linearRegressionModel.cpp  linearRegressionModel.h  regression.cpp  regression.h
experimentWidget/: datasetAnalysisTable.cpp  datasetAnalysisTable.h  experimentTable.cpp  experimentTable.h  experimentTreeModel.cpp  experimentTreeModel.h  experimentWidget.cpp  experimentWidget.h  experimentWidget.ui  featureFilterModel.cpp  featureFilterModel.h
featureWidget/: featureGraphicsItem.cpp  featureGraphicsItem.h  featureGraphicsScene.cpp  featureGraphicsScene.h  featureHeaderGraphicsItem.cpp  featureHeaderGraphicsItem.h
languages/: Diploma_ru.ts
linearRegression/: linearRegression.cpp  linearRegression.h
mainWindow/: mainWindow.cpp  mainWindow.h  mainWindow.ui  plotController.cpp  plotController.h  viewController.cpp  viewController.h
treeWidget/: treeModel.cpp  treeModel.h  treeView.cpp  treeView.h
